# schedj

./: .env.example  Justfile  NEXT.md  README.md  compose.yml  package.json
.agents/: AGENTS.md
crates/calendar-provider/: Cargo.toml
crates/calendar-provider/src/: lib.rs
crates/database/: Cargo.toml
crates/database/migrations/2026-07-04-005442-0000_initial_schema/: down.sql  up.sql
crates/database/src/: lib.rs  schema.rs
crates/lexicons/: .gitignore  Cargo.toml  README.md
crates/provider-caldav/: Cargo.toml
crates/provider-caldav/src/: lib.rs
crates/provider-gcal/: Cargo.toml
crates/provider-gcal/src/: lib.rs
crates/provider-msft/: Cargo.toml
crates/provider-msft/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  service.rs
lexicons/com/schedj/: book.json  getAvailability.json  meetingType.json
lexicons/com/schedj/actor/: profile.json
web/: package.json  wrangler.jsonc
web/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
web/.wrangler/state/v3/images/miniflare-images-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
web/.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
