[package]
name = "provider-gcal"
version = "0.1.0"
edition = "2024"

[dependencies]
calendar-provider = { path = "../calendar-provider" }
chrono = { version = "0.4.45", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
